<resources>
    <string name="app_name">IoT Device App</string>

    <string name="github_url">https://github.com/AguilarLagunasArturo/iot-dom</string>
    <string name="api">https://km83gb3bwa.execute-api.us-east-1.amazonaws.com/default/iot-skill-api</string>
    <string name="ap">SS2021 - LOGGER</string>

    <string name="nav_header_title">Control your IoT Device</string>
    <string name="nav_header_subtitle">SS2021</string>
    <string name="action_source_code">Source code</string>
    <string name="access_point">Adding IoT Device</string>

    <string name="menu_add_device">Add device</string>
    <string name="menu_my_devices">My devices</string>
    <string name="menu_about">About</string>

    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_short">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <string name="act_scanning">Scanning</string>

    <string name="wifi_scan">Scan IoT Devices</string>
    <string name="wifi_enabled">WiFi enabled</string>
    <string name="wifi_enable_error">Cannot enable WiFi</string>
    <string name="wifi_not_found">There is no WiFi Networks available</string>

    <string name="state_on">ON</string>
    <string name="state_off">OFF</string>
    <string name="state_sending">SENDING</string>
    <string name="state_unknown">UNKNOWN</string>
    <string name="state_loading">LOADING</string>

    <string name="toast_device_unavailable">Device unavailable</string>
    <string name="toast_error">An error occurred</string>
    <string name="toast_not_a_device">This is not an IoT device</string>
    <string name="toast_waiting_for_device">Waiting for device</string>

    <string name="cannot_use_app">Cannot use the app without the permission</string>

    <string name="how_to_title">How to use</string>
    <string name="how_to_1">
        Open navigation drawer and select Add Device
    </string>
    <string name="how_to_2">
        Scan IoT Devices
    </string>
    <string name="how_to_3">
        Select SS2021 - LOGGER
    </string>
    <string name="how_to_4">
        Wait for connection with the IoT Device
    </string>
    <string name="how_to_5">
        Choose complete action with Adding IoT Device
    </string>
    <string name="how_to_6">
        Select your WiFi Network
    </string>
    <string name="how_to_7">
        Input your WiFi Network password and press OK
    </string>
    <string name="how_to_8">
        Wait until the IoT Device is added
    </string>
    <string name="how_to_9">
        Once added it should look like this
    </string>
    <string name="how_to_10">
        Select the IoT Device
    </string>
    <string name="how_to_11">
        Wait until Device detected
    </string>
    <string name="how_to_12">
        Done, now you can control your IoT Device
    </string>

    <string name="alert_title">Add IoT Device</string>
    <string name="alert_description">To manually add your IoT Device type Its UUID and press OK</string>

    <string name="alert_uuid">UUID</string>
    <string name="alert_hint_uuid">iot-skill-01</string>
    <string name="alert_type">TYPE</string>
    <string name="alert_hint_type">SWITCH</string>

    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

</resources>
